# onnx_clip

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  clip_to_onnx.py  create_ground_truth_data.py  pyproject.toml  requirements_.txt  setup.py
clip2onnx/: model_card.py  templates.py  utils.py
examples/: demo_auto_labeling.py  demo_clip2onnx.py  demo_print_available_open_clip_models.py
examples/_clip_driver/: __init__.py  utils.py  zero_shot_image_classifier.py
lakera_clip/: __init__.py  model.py  preprocessor.py  tokenizer.py
onnx_clip/: __init__.py  model.py  preprocessor.py  tokenizer.py
onnx_clip/data/: clip_model_vitb32.onnx  expected_preprocessed_image.npy
tests/: test_model.py  test_preprocessor.py  test_tokenizer.py
