[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onnx_clip"
version = "1.0"
description = "Replicating CLIP without PyTorch dependencies."
readme = "README.md"
authors = [
    { name="Lakera AI", email="dev@lakera.ai" },
]
requires-python = ">=3.6"
dependencies = [
    "numpy>=0.18.0",
    "opencv-python-headless>=4.0.1",
    "onnxruntime>=0.4.0",
    "pillow>=8.4.0",
    "ftfy>=6.0.3",
    "regex"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lakeraai/onnx_clip"