[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "onnx_clip"
version = "4.0.0"
description = "CLIP with ONNX Runtime and without PyTorch dependencies."
readme = "README.md"
authors = ["Lakera AI <dev@lakera.ai>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lakeraai/onnx_clip"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.0"
opencv-python-headless = "^4.0.1"
onnxruntime = ">=1.4.0"
pillow = "^10.1.0"
ftfy = "^6.0.3"
regex = "*"
requests = "^2.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
